[workspace]
resolver = "2"
members = [
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "MIT"
repository = "https://github.com/jscott3201/xeto-bacnet"
homepage = "https://github.com/jscott3201/xeto-bacnet"
keywords = ["haystack", "iot", "building-automation", "bacnet", "xeto"]
categories = ["encoding", "network-programming"]
